* `request` now uses `curlPerform` instead of `getURL` to gain finer control over API requests.
* `request` now attempts to `tryCatch` any errors on writing the MTurkR log file. (#9)
* `request` now returns an object of S3 class "MTurkResponse" and an associated print method has been added.

## BUG FIXES ##
* `HITStatus` now prints correctly when only one HIT is retrieved.
* `ApproveAllAssignments` now only attempts to approved assignments with AssignmentStatus "Submitted".
* `as.data.frame.QuestionForm` now returns "Overview" elements and "Question" elements as one data.frame, distinguished by a new column: `Element`. (#8)
* `GetQualifications` and `GetQualificationRequests` now respect the `return.all` argument.
* The `return.qual.dataframe` argument in `GetQualificationType` and `GetQualifications` is removed.
* Fixed a bug in `GetBonuses` whereby the default `return.all=TRUE` argument overwrote manually specified `pagenumber` and `pagesize` arguments. When `GetBonuses` is called with a `hit.type`, `return.all` is used recursively, such that `return.all=FALSE` returns the requested page for each HIT of the requested HITType. (h/t Dane Wendell, #37)
* Corrected the API operation name in `SendTestEventNotification`.
* Fixed a bug in `GetBonuses` using a HITTypeId that caused the function to fail catastrophically.

## DOCUMENTATION ##
* The `return.qual.dataframe` argument in `GetQualificationType` and `GetQualifications` is removed.
* All functions now reflect the new `...` argument, the contents of which are passed to `request`. (#38)
* All references to the `browser` options are removed given removal of the feature from all functions.
* Documentation for `mturkhelp` and `APIReference` now reflect deprecated status.
* Documentation file for `authenticate` now reflect its deprecated status.