@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.4.6
-Date: 2014-07-16
+Version: 0.4.7
+Date: 2014-07-28
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
