@@ -5,14 +5,14 @@
 \usage{
 GenerateQualificationRequirement(qual, 
                                  comparator, 
-                                 value, 
+                                 value = NULL, 
                                  preview = NULL, 
                                  qual.number = NULL)
 }
 \arguments{
   \item{qual}{A character string containing a QualificationTypeId, or a vector of QualificationTypeIds. This parameter also accepts shorthand labels for built-in QualificationTypes: \dQuote{Approved} (percent of assignments approved), \dQuote{NumberApproved} (number of assignments approved), \dQuote{Locale}, \dQuote{Adult}, and MTurk \dQuote{masters} QualificationTypes (\dQuote{Masters}, \dQuote{Categorization}, or \dQuote{Photo Moderation}).}
   \item{comparator}{A character string containing a comparator, or a vector of comparators, by which a worker's score of a qualification is compared to the specified \code{value}. One of \code{<},\code{<=},\code{>},\code{>=},\code{==},\code{!=},\dQuote{Exists},\dQuote{DoesNotExist},\dQuote{In},\dQuote{NotIn}. For \dQuote{Masters}-type qualifications, only \code{Exists} is available.}
-  \item{value}{A numeric or character string value (or vector of such) against which workers scores will be compared. Must be a non-negative integer, except when \code{qualification="Locale"} (when it must be a two-digit country code). To .}
+  \item{value}{A numeric or character string value (or vector of such) against which workers scores will be compared. Must be a non-negative integer, except when \code{qualification="Locale"} (when it must be a two-digit country code) or when \code{comparator %in% c("Exists","DoesNotExist")} (when it must be an empty character string). When using the \dQuote{In} or \dQuote{NotIn} comparators, each element in \code{value} can be a comma-separated string of up to 15 values (e.g., 15 discrete scores or 15 discrete locales to use for that Qualification).}
   \item{preview}{An optional logical specifying whether a worker must have the Qualification in order to preview the HIT on the MTurk worker site. The default is \code{FALSE}.}
   \item{qual.number}{An argument for primarily internal use.}
 }
@@ -46,5 +46,6 @@ q4 <- GenerateQualificationRequirement(c("Locale","Approved"),
                                        c("==",">"), 
                                        c("US,UK,DK",90), 
                                        preview = c(TRUE,FALSE))
-}
+# `Exists` comparator
+q5 <- GenerateQualificationRequirement("Approved", "Exists", "")
 \keyword{Qualifications}
